// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/channel_view > Should match snapshot if channel is archived 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="a11y__region"
      data-a11y-focus-child="true"
      data-a11y-order-reversed="true"
      data-a11y-sort-order="1"
      id="post-list"
    />
    <div
      class="post-create__container"
      id="post-create"
    >
      <div
        class="channel-archived__message"
        id="channelArchivedMessage"
      >
        You are viewing an 
        <b>
          archived channel
        </b>
        . New messages cannot be posted.
        <button
          class="btn btn-primary channel-archived__close-btn"
        >
          Close Channel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/channel_view > Should match snapshot if channel is deactivated 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="a11y__region"
      data-a11y-focus-child="true"
      data-a11y-order-reversed="true"
      data-a11y-sort-order="1"
      id="post-list"
    />
    <div
      class="post-create__container AdvancedTextEditor__ctr"
      id="post-create"
    >
      <div
        class="channel-archived__message"
      >
        You are viewing an archived channel with a 
        <b>
          deactivated user
        </b>
        . New messages cannot be posted.
        <button
          class="btn btn-primary channel-archived__close-btn"
        >
          Close Channel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/channel_view > Should match snapshot with base props 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="a11y__region"
      data-a11y-focus-child="true"
      data-a11y-order-reversed="true"
      data-a11y-sort-order="1"
      id="post-list"
    />
    <div
      class="post-create__container AdvancedTextEditor__ctr"
      data-testid="post-create"
      id="post-create"
    />
  </div>
</div>
`;
